<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ToolsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/length"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_password_length"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="24"
            app:layout_constraintEnd_toEndOf="@+id/text_length"
            app:layout_constraintStart_toStartOf="@+id/text_length"
            app:layout_constraintTop_toBottomOf="@+id/text_length" />

        <TextView
            android:id="@+id/text_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/options"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            app:layout_constraintEnd_toEndOf="@+id/text_length"
            app:layout_constraintStart_toStartOf="@+id/text_length"
            app:layout_constraintTop_toBottomOf="@+id/slider_password_length" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:layout_constraintEnd_toEndOf="@+id/text_options"
            app:layout_constraintStart_toStartOf="@+id/text_options"
            app:layout_constraintTop_toBottomOf="@+id/text_options">

            <Button
                android:id="@+id/button_numbers"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numbers" />

            <Button
                android:id="@+id/button_letters"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letters" />

            <Button
                android:id="@+id/button_symbols"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbols" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/text_generated_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintEnd_toEndOf="@+id/toggle_button_options"
            app:layout_constraintStart_toStartOf="@+id/toggle_button_options"
            app:layout_constraintTop_toBottomOf="@+id/toggle_button_options"
            tools:text="Password" />

        <Button
            android:id="@+id/button_copy_password"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/copy"
            app:icon="@drawable/ic_copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_generate_password"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/toggle_button_options"
            app:layout_constraintTop_toBottomOf="@+id/text_generated_password" />

        <Button
            android:id="@+id/button_generate_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/refresh"
            app:icon="@drawable/ic_refresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/toggle_button_options"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_copy_password"
            app:layout_constraintTop_toBottomOf="@+id/text_generated_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>