<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthenticateActivity">

    <TextView
        android:id="@+id/textview_authentication_instruction"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/authentication_instruction"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/textfield_input_password"
        app:layout_constraintEnd_toEndOf="@+id/textfield_input_password"
        app:layout_constraintStart_toStartOf="@+id/textfield_input_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_input_password"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:hint="@string/authentication_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="@string/authentication_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_unlock"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/authentication_unlock_button"
        app:icon="@drawable/ic_unlock"
        app:layout_constraintStart_toStartOf="@+id/textfield_input_password"
        app:layout_constraintEnd_toStartOf="@+id/iconbutton_fingerprint"
        app:layout_constraintTop_toBottomOf="@+id/textfield_input_password" />

    <Button
        android:id="@+id/iconbutton_fingerprint"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_fingerprint"
        app:layout_constraintBottom_toBottomOf="@+id/button_unlock"
        app:layout_constraintEnd_toEndOf="@+id/textfield_input_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_unlock" />

</androidx.constraintlayout.widget.ConstraintLayout>